--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -282,3 +282,5 @@
   <textarea rows="5" cols="50" class="json-holder" [(ngModel)]="json_format"></textarea>
   <button (click)="toJSON()">To JSON</button>
 </div>
+
+<button>Save</button>
